--- a/index.html
+++ b/index.html
@@ -6,11 +6,7 @@
 <title>Auto-Style</title>
 
 <style>
-
-/* ===== FIX OVERFLOW ===== */
-*, *::before, *::after{
-box-sizing:border-box;
-}
+*, *::before, *::after{box-sizing:border-box;}
 
 :root{
 --green:#2e7d32;
@@ -28,109 +24,67 @@ overflow-x:hidden;
 
 /* ===== LOGIN ===== */
 .login-screen{
-position:fixed;
-inset:0;
-display:flex;
-justify-content:center;
-align-items:center;
+position:fixed;inset:0;
+display:flex;justify-content:center;align-items:center;
 background:linear-gradient(135deg,var(--green-dark),#000);
-z-index:9999;
-padding:15px;
+z-index:9999;padding:15px;
 }
 
 .login-box{
 background:white;
 padding:30px 25px;
 border-radius:20px;
-width:100%;
-max-width:400px;
+width:100%;max-width:400px;
 text-align:center;
 box-shadow:0 30px 70px rgba(0,0,0,.4);
 }
 
-.login-title{
-font-size:26px;
-font-weight:bold;
-margin-bottom:20px;
-}
+.login-title{font-size:26px;font-weight:bold;margin-bottom:20px;}
 
-select,
-input{
-width:100%;
-max-width:100%;
-display:block;
-padding:12px;
-margin-bottom:15px;
-border-radius:12px;
-border:1px solid #ccc;
-font-size:16px;
+select,input{
+width:100%;padding:12px;margin-bottom:15px;
+border-radius:12px;border:1px solid #ccc;font-size:16px;
 }
 
 .login-btn{
-width:100%;
-padding:14px;
-border:none;
-border-radius:14px;
+width:100%;padding:14px;border:none;border-radius:14px;
 background:linear-gradient(135deg,var(--green),var(--green-dark));
-color:white;
-font-size:16px;
-font-weight:bold;
-cursor:pointer;
-transition:.3s;
-}
-
-.error-msg{
-color:#d32f2f;
-margin-top:10px;
-font-size:14px;
+color:white;font-size:16px;font-weight:bold;cursor:pointer;
 }
 
 /* ===== HEADER ===== */
 .header{
-background:white;
-padding:15px;
-text-align:center;
+background:white;padding:15px;text-align:center;
 box-shadow:0 4px 15px rgba(0,0,0,.08);
-position:sticky;
-top:0;
-z-index:100;
+position:sticky;top:0;z-index:100;
 }
 
-.logo{
-font-size:26px;
-font-weight:bold;
-}
+.logo{font-size:26px;font-weight:bold;}
 .logo .green{color:var(--green);}
 .logo .black{color:#000;}
 
-/* ===== MENU ===== */
+/* ===== MENU BUTTON ===== */
 .menu-toggle{
-position:fixed;
-top:15px;
-left:15px;
-width:48px;
-height:48px;
+position:fixed;top:15px;left:15px;
+width:48px;height:48px;
 background:linear-gradient(135deg,var(--green),var(--green-dark));
-color:white;
-display:flex;
-justify-content:center;
-align-items:center;
-border-radius:14px;
-cursor:pointer;
+color:white;display:flex;align-items:center;justify-content:center;
+border-radius:14px;cursor:pointer;
 z-index:3000;
+box-shadow:0 8px 20px rgba(0,0,0,.3);
 }
 
+/* ===== GLASS MENU ===== */
 .side-menu{
-position:fixed;
-top:0;
-left:0;
-width:260px;
-height:100%;
-background:#111;
-color:white;
+position:fixed;top:0;left:0;
+width:260px;height:100%;
 padding:80px 20px;
+background:rgba(20,20,20,.75);
+backdrop-filter:blur(18px);
+-webkit-backdrop-filter:blur(18px);
+border-right:1px solid rgba(255,255,255,.1);
 transform:translateX(-100%);
-transition:.3s;
+transition:transform .35s cubic-bezier(.77,0,.18,1);
 z-index:2999;
 }
 
@@ -139,107 +93,65 @@ transform:translateX(0);
 }
 
 .side-menu button{
-width:100%;
-padding:12px;
-margin-bottom:12px;
-border:none;
-border-radius:12px;
-background:#222;
-color:white;
-cursor:pointer;
+width:100%;padding:12px;margin-bottom:12px;
+border:none;border-radius:14px;
+background:rgba(255,255,255,.08);
+color:white;font-weight:500;
+cursor:pointer;transition:.25s;
 }
 
+.side-menu button:hover{
+background:var(--green);
+transform:translateX(5px);
+}
+
+/* ===== OVERLAY ===== */
 .overlay{
-position:fixed;
-inset:0;
+position:fixed;inset:0;
 background:rgba(0,0,0,.4);
-opacity:0;
-pointer-events:none;
+backdrop-filter:blur(3px);
+opacity:0;pointer-events:none;
 transition:.3s;
 z-index:2000;
 }
 
 .overlay.active{
-opacity:1;
-pointer-events:auto;
+opacity:1;pointer-events:auto;
 }
 
 /* ===== CALCULATORS ===== */
 .wrapper{
 display:grid;
 grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
-gap:20px;
-padding:20px 15px 40px 15px;
-max-width:1400px;
-margin:auto;
+gap:20px;padding:20px;
+max-width:1400px;margin:auto;
 }
 
 .calculator{
-background:white;
-padding:20px;
-border-radius:20px;
+background:white;padding:20px;border-radius:20px;
 box-shadow:0 10px 30px rgba(0,0,0,.08);
-width:100%;
 }
 
-.title{
-font-size:18px;
-font-weight:bold;
-margin-bottom:5px;
-}
+.title{font-size:18px;font-weight:bold;margin-bottom:5px;}
+.subtitle{color:#d32f2f;font-weight:bold;margin-bottom:15px;}
 
-.subtitle{
-color:#d32f2f;
-font-weight:bold;
-margin-bottom:15px;
-}
-
-.calculator input{
-width:100%;
-max-width:100%;
-}
+.calculator input{width:100%;}
 
 .btn{
-width:100%;
-padding:12px;
-border:none;
-border-radius:14px;
+width:100%;padding:12px;margin-bottom:15px;
+border:none;border-radius:14px;
 background:linear-gradient(135deg,var(--blue),#0d47a1);
-color:white;
-font-weight:bold;
-cursor:pointer;
-margin-bottom:15px;
+color:white;font-weight:bold;cursor:pointer;
 }
 
-table{
-width:100%;
-border-collapse:collapse;
-font-size:14px;
-}
+table{width:100%;border-collapse:collapse;font-size:14px;}
+th{text-align:left;border-bottom:1px solid #ddd;padding-bottom:6px;}
+td{padding:8px 0;border-bottom:1px solid #eee;}
+.result{font-weight:bold;}
 
-th{
-text-align:left;
-border-bottom:1px solid #ddd;
-padding-bottom:6px;
-}
-
-td{
-padding:8px 0;
-border-bottom:1px solid #eee;
-}
-
-.result{
-font-weight:bold;
-}
-
-/* ===== MOBILE ===== */
 @media(max-width:768px){
-.wrapper{
-grid-template-columns:1fr;
-padding:15px;
+.wrapper{grid-template-columns:1fr;padding:15px;}
 }
-}
-
 </style>
 </head>
 <body>
@@ -257,38 +169,40 @@ padding:15px;
 </select>
 <input type="password" id="passwordInput" placeholder="Введите пароль">
 <button id="loginBtn" class="login-btn">ВОЙТИ</button>
-<div id="errorMsg" class="error-msg"></div>
+<div id="errorMsg" style="color:red;"></div>
 </div>
 </div>
 
 <!-- MENU -->
-<div class="menu-toggle" onclick="toggleMenu()">☰</div>
+<div class="menu-toggle" onclick="openMenu()">☰</div>
+
 <div id="sideMenu" class="side-menu">
-<div id="currentUser" style="margin-bottom:20px;font-weight:bold;"></div>
-<button>ОФОРМИТЬ БЕЗНАЛ</button>
-<button>ЗАКРЫТИЕ СМЕНЫ</button>
-<button>СКИДОЧНАЯ КАРТА</button>
+<div id="currentUser" style="color:white;margin-bottom:20px;font-weight:bold;"></div>
+<button onclick="location.href='beznal.html'">ОФОРМИТЬ БЕЗНАЛ</button>
+<button onclick="location.href='smena.html'">ЗАКРЫТИЕ СМЕНЫ</button>
+<button onclick="location.href='discount.html'">СКИДОЧНАЯ КАРТА</button>
+<button onclick="location.href='pass.html'">СМЕНИТЬ ПАРОЛЬ</button>
 <button onclick="logout()">ВЫЙТИ</button>
 </div>
 
 <!-- HEADER -->
 <div class="header">
 <div class="logo">
-<span class="green">A</span><span class="black">uto-</span><span class="green">S</span><span class="black">tyle</span>
+<span class="green">A</span><span class="black">uto-</span>
+<span class="green">S</span><span class="black">tyle</span>
 </div>
 </div>
 
 <!-- CALCULATORS -->
 <div class="wrapper">
 
-<!-- АГРОПРОМБАНК -->
 <div class="calculator">
 <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
 <div class="subtitle">АГРОПРОМБАНК</div>
 <input type="number" class="sum">
 <button class="btn btn-calc">РАССЧИТАТЬ</button>
 <table>
-<tr><th>РАССРОЧКА</th><th>КОЭФФ.</th><th>ИТОГО</th></tr>
+<tr><th>СРОК</th><th>К</th><th>ИТОГО</th></tr>
 <tr><td>3 мес.</td><td class="coef">0.955</td><td class="result"></td></tr>
 <tr><td>6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
 <tr><td>9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
@@ -296,7 +210,6 @@ padding:15px;
 </table>
 </div>
 
-<!-- ЭКСИМБАНК -->
 <div class="calculator">
 <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
 <div class="subtitle">ЭКСИМБАНК</div>
@@ -310,7 +223,6 @@ padding:15px;
 </table>
 </div>
 
-<!-- СБЕРБАНК -->
 <div class="calculator">
 <div class="title">КАЛЬКУЛЯТОР РАССРОЧКИ</div>
 <div class="subtitle">СБЕРБАНК</div>
@@ -343,16 +255,42 @@ document.getElementById("currentUser").textContent="👤 "+users[u].name;
 
 function logout(){location.reload();}
 
+/* ===== MENU CONTROL ===== */
 const sideMenu=document.getElementById("sideMenu");
 const overlay=document.getElementById("overlay");
 
-function toggleMenu(){
-sideMenu.classList.toggle("active");
-overlay.classList.toggle("active");
+function openMenu(){
+sideMenu.classList.add("active");
+overlay.classList.add("active");
 }
-overlay.onclick=toggleMenu;
+function closeMenu(){
+sideMenu.classList.remove("active");
+overlay.classList.remove("active");
+}
+overlay.onclick=closeMenu;
 
-/* CALCULATORS */
+/* ===== SWIPE ===== */
+let startX=0;
+
+document.addEventListener("touchstart",e=>{
+startX=e.touches[0].clientX;
+});
+
+document.addEventListener("touchend",e=>{
+let endX=e.changedTouches[0].clientX;
+
+/* открыть */
+if(startX<40 && endX>120){
+openMenu();
+}
+
+/* закрыть */
+if(startX>150 && endX<80){
+closeMenu();
+}
+});
+
+/* ===== CALCULATORS ===== */
 document.querySelectorAll(".calculator").forEach(calc=>{
 calc.querySelector(".btn-calc").onclick=function(){
 const sum=parseFloat(calc.querySelector(".sum").value);
