--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 <title>Auto-Style</title>
+  <title>Панель Менеджера</title>
 
 <style>
 *, *::before, *::after{box-sizing:border-box;}
@@ -305,3 +306,4 @@ calc.querySelectorAll(".result")[i].textContent=
 
 </body>
 </html>
+
