--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ td{padding:8px 0;border-bottom:1px solid #eee;}
 <button onclick="location.href='beznal.html'">ОФОРМИТЬ БЕЗНАЛ</button>
 <button onclick="location.href='smena.html'">ЗАКРЫТИЕ СМЕНЫ</button>
 <button onclick="location.href='discount.html'">СКИДОЧНАЯ КАРТА</button>
-<button onclick="location.href='pass.html'">СМЕНИТЬ ПАРОЛЬ</button>
+<button onclick="location.href='pass.html'">ПАРОЛИ</button>
 <button onclick="logout()">ВЫЙТИ</button>
 </div>
 
@@ -191,6 +191,8 @@ td{padding:8px 0;border-bottom:1px solid #eee;}
 <div class="logo">
 <span class="green">A</span><span class="black">uto-</span>
 <span class="green">S</span><span class="black">tyle</span>
+  <span class="green">П</span><span class="black">анель-</span>
+<span class="green">М</span><span class="black">енеджера</span>
 </div>
 </div>
 
@@ -203,7 +205,6 @@ td{padding:8px 0;border-bottom:1px solid #eee;}
 <input type="number" class="sum">
 <button class="btn btn-calc">РАССЧИТАТЬ</button>
 <table>
-<tr><th>СРОК</th><th>К</th><th>ИТОГО</th></tr>
 <tr><td>3 мес.</td><td class="coef">0.955</td><td class="result"></td></tr>
 <tr><td>6 мес.</td><td class="coef">0.93</td><td class="result"></td></tr>
 <tr><td>9 мес.</td><td class="coef">0.90</td><td class="result"></td></tr>
@@ -306,4 +307,5 @@ calc.querySelectorAll(".result")[i].textContent=
 
 </body>
 </html>
+
 
