--- a/index.html
+++ b/index.html
@@ -72,21 +72,20 @@ background:linear-gradient(135deg,var(--green),var(--green-dark));
 color:white;display:flex;align-items:center;justify-content:center;
 border-radius:14px;cursor:pointer;
 z-index:3000;
-box-shadow:0 8px 20px rgba(0,0,0,.3);
+box-shadow:0 6px 15px rgba(0,0,0,.2);
 }
 
-/* ===== GLASS MENU ===== */
+/* ===== SIDE MENU (PC LIGHT VERSION) ===== */
 .side-menu{
 position:fixed;top:0;left:0;
 width:260px;height:100%;
 padding:80px 20px;
-background:rgba(20,20,20,.75);
-backdrop-filter:blur(18px);
--webkit-backdrop-filter:blur(18px);
-border-right:1px solid rgba(255,255,255,.1);
+background:#1f1f1f;
+border-right:1px solid #2a2a2a;
 transform:translateX(-100%);
-transition:transform .35s cubic-bezier(.77,0,.18,1);
+transition:transform .25s ease;
 z-index:2999;
+will-change:transform;
 }
 
 .side-menu.active{
@@ -95,24 +94,22 @@ transform:translateX(0);
 
 .side-menu button{
 width:100%;padding:12px;margin-bottom:12px;
-border:none;border-radius:14px;
-background:rgba(255,255,255,.08);
+border:none;border-radius:12px;
+background:#2a2a2a;
 color:white;font-weight:500;
-cursor:pointer;transition:.25s;
+cursor:pointer;transition:.2s;
 }
 
 .side-menu button:hover{
 background:var(--green);
-transform:translateX(5px);
 }
 
-/* ===== OVERLAY ===== */
+/* ===== OVERLAY (PC WITHOUT BLUR) ===== */
 .overlay{
 position:fixed;inset:0;
-background:rgba(0,0,0,.4);
-backdrop-filter:blur(3px);
+background:rgba(0,0,0,.35);
 opacity:0;pointer-events:none;
-transition:.3s;
+transition:.2s;
 z-index:2000;
 }
 
@@ -130,7 +127,7 @@ max-width:1400px;margin:auto;
 
 .calculator{
 background:white;padding:20px;border-radius:20px;
-box-shadow:0 10px 30px rgba(0,0,0,.08);
+box-shadow:0 8px 20px rgba(0,0,0,.06);
 }
 
 .title{font-size:18px;font-weight:bold;margin-bottom:5px;}
@@ -146,12 +143,27 @@ color:white;font-weight:bold;cursor:pointer;
 }
 
 table{width:100%;border-collapse:collapse;font-size:14px;}
-th{text-align:left;border-bottom:1px solid #ddd;padding-bottom:6px;}
 td{padding:8px 0;border-bottom:1px solid #eee;}
 .result{font-weight:bold;}
 
+/* ===== MOBILE VERSION (GLASS EFFECT) ===== */
 @media(max-width:768px){
+
 .wrapper{grid-template-columns:1fr;padding:15px;}
+
+.side-menu{
+background:rgba(20,20,20,.75);
+backdrop-filter:blur(18px);
+-webkit-backdrop-filter:blur(18px);
+border-right:1px solid rgba(255,255,255,.1);
+transition:transform .35s cubic-bezier(.77,0,.18,1);
+}
+
+.overlay{
+background:rgba(0,0,0,.4);
+backdrop-filter:blur(3px);
+}
+
 }
 </style>
 </head>
@@ -307,5 +319,6 @@ calc.querySelectorAll(".result")[i].textContent=
 
 </body>
 </html>
+
 
 
