--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@ backdrop-filter:blur(3px);
 <button onclick="location.href='beznal.html'">ОФОРМИТЬ БЕЗНАЛ</button>
 <button onclick="location.href='smena.html'">ЗАКРЫТИЕ СМЕНЫ</button>
 <button onclick="location.href='discount.html'">СКИДОЧНАЯ КАРТА</button>
+<button onclick="location.href='baza.html'">БАЗА ЗНАНИЙ</button>
 <button onclick="location.href='pass.html'">ПАРОЛИ</button>
 <button onclick="logout()">ВЫЙТИ</button>
 </div>
@@ -203,8 +204,6 @@ backdrop-filter:blur(3px);
 <div class="logo">
 <span class="green">A</span><span class="black">uto-</span>
 <span class="green">S</span><span class="black">tyle</span>
-  <span class="green">П</span><span class="black">анель-</span>
-<span class="green">М</span><span class="black">енеджера</span>
 </div>
 </div>
 
@@ -319,6 +318,7 @@ calc.querySelectorAll(".result")[i].textContent=
 
 </body>
 </html>
+
 
 
 
