--- a/baza.html
+++ b/baza.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-<title>База знаний</title>
+<title>Р‘Р°Р·Р° Р·РЅР°РЅРёР№</title>
 
 <style>
 *, *::before, *::after{box-sizing:border-box;}
@@ -124,7 +124,7 @@ background:#f9f9f9;
 margin:10px 0;
 }
 
-/* стрелка */
+/* СЃС‚СЂРµР»РєР° */
 .accordion-header::after{
 content:"\25BC";
 transition:transform .3s;
@@ -151,13 +151,13 @@ transition:transform .35s cubic-bezier(.77,0,.18,1);
 <div class="overlay" id="overlay"></div>
 
 <!-- MENU -->
-<div class="menu-toggle" onclick="openMenu()">?</div>
+<div class="menu-toggle" onclick="openMenu()">в°</div>
 <div id="sideMenu" class="side-menu">
-<div id="currentUser" style="color:white;margin-bottom:20px;font-weight:bold;">?? Менеджер</div>
-<button onclick="location.href='beznal.html'">ОФОРМИТЬ БЕЗНАЛ</button>
-<button onclick="location.href='smena.html'">ЗАКРЫТИЕ СМЕНЫ</button>
-<button onclick="location.href='discount.html'">СКИДОЧНАЯ КАРТА</button>
-<button onclick="location.href='pass.html'">ПАРОЛИ</button>
+<div id="currentUser" style="color:white;margin-bottom:20px;font-weight:bold;">рџ‘¤ РњРµРЅРµРґР¶РµСЂ</div>
+<button onclick="location.href='beznal.html'">РћР¤РћР РњРРўР¬ Р‘Р•Р—РќРђР›</button>
+<button onclick="location.href='smena.html'">Р—РђРљР Р«РўРР• РЎРњР•РќР«</button>
+<button onclick="location.href='discount.html'">РЎРљРР”РћР§РќРђРЇ РљРђР РўРђ</button>
+<button onclick="location.href='pass.html'">РџРђР РћР›Р</button>
 </div>
 
 <!-- HEADER -->
@@ -165,8 +165,8 @@ transition:transform .35s cubic-bezier(.77,0,.18,1);
 <div class="logo">
 <span class="green">A</span><span class="black">uto-</span>
 <span class="green">S</span><span class="black">tyle</span>
-<span class="green">Б</span><span class="black">аза-</span>
-<span class="green">З</span><span class="black">наний</span>
+<span class="green">Р‘</span><span class="black">Р°Р·Р°-</span>
+<span class="green">Р—</span><span class="black">РЅР°РЅРёР№</span>
 </div>
 </div>
 
@@ -174,30 +174,30 @@ transition:transform .35s cubic-bezier(.77,0,.18,1);
 <div class="wrapper">
 
 <div class="accordion-item">
-<div class="accordion-header">1. Подбор масла</div>
+<div class="accordion-header">1. РџРѕРґР±РѕСЂ РјР°СЃР»Р°</div>
 <div class="accordion-body">
-<p>Здесь можно подобрать подходящее масло для вашего автомобиля, учитывая тип двигателя, вязкость и бренд.</p>
+<p>Р—РґРµСЃСЊ РјРѕР¶РЅРѕ РїРѕРґРѕР±СЂР°С‚СЊ РїРѕРґС…РѕРґСЏС‰РµРµ РјР°СЃР»Рѕ РґР»СЏ РІР°С€РµРіРѕ Р°РІС‚РѕРјРѕР±РёР»СЏ, СѓС‡РёС‚С‹РІР°СЏ С‚РёРї РґРІРёРіР°С‚РµР»СЏ, РІСЏР·РєРѕСЃС‚СЊ Рё Р±СЂРµРЅРґ.</p>
 </div>
 </div>
 
 <div class="accordion-item">
-<div class="accordion-header">2. Подбор фильтров</div>
+<div class="accordion-header">2. РџРѕРґР±РѕСЂ С„РёР»СЊС‚СЂРѕРІ</div>
 <div class="accordion-body">
-<p>Подбор воздушных, масляных и топливных фильтров для различных моделей автомобилей.</p>
+<p>РџРѕРґР±РѕСЂ РІРѕР·РґСѓС€РЅС‹С…, РјР°СЃР»СЏРЅС‹С… Рё С‚РѕРїР»РёРІРЅС‹С… С„РёР»СЊС‚СЂРѕРІ РґР»СЏ СЂР°Р·Р»РёС‡РЅС‹С… РјРѕРґРµР»РµР№ Р°РІС‚РѕРјРѕР±РёР»РµР№.</p>
 </div>
 </div>
 
 <div class="accordion-item">
-<div class="accordion-header">3. Подбор лампочек</div>
+<div class="accordion-header">3. РџРѕРґР±РѕСЂ Р»Р°РјРїРѕС‡РµРє</div>
 <div class="accordion-body">
-<p>Выбор лампочек для фар, габаритов и салона, совместимые с вашей моделью автомобиля.</p>
+<p>Р’С‹Р±РѕСЂ Р»Р°РјРїРѕС‡РµРє РґР»СЏ С„Р°СЂ, РіР°Р±Р°СЂРёС‚РѕРІ Рё СЃР°Р»РѕРЅР°, СЃРѕРІРјРµСЃС‚РёРјС‹Рµ СЃ РІР°С€РµР№ РјРѕРґРµР»СЊСЋ Р°РІС‚РѕРјРѕР±РёР»СЏ.</p>
 </div>
 </div>
 
 <div class="accordion-item">
-<div class="accordion-header">4. Подбор дворников</div>
+<div class="accordion-header">4. РџРѕРґР±РѕСЂ РґРІРѕСЂРЅРёРєРѕРІ</div>
 <div class="accordion-body">
-<p>Подбор щёток стеклоочистителя для лобового и заднего стекла с указанием размера и крепления.</p>
+<p>РџРѕРґР±РѕСЂ С‰С‘С‚РѕРє СЃС‚РµРєР»РѕРѕС‡РёСЃС‚РёС‚РµР»СЏ РґР»СЏ Р»РѕР±РѕРІРѕРіРѕ Рё Р·Р°РґРЅРµРіРѕ СЃС‚РµРєР»Р° СЃ СѓРєР°Р·Р°РЅРёРµРј СЂР°Р·РјРµСЂР° Рё РєСЂРµРїР»РµРЅРёСЏ.</p>
 </div>
 </div>
 
@@ -227,8 +227,8 @@ startX=e.touches[0].clientX;
 
 document.addEventListener("touchend",e=>{
 let endX=e.changedTouches[0].clientX;
-if(startX<40 && endX>120) openMenu();   // открыть
-if(startX>150 && endX<80) closeMenu();  // закрыть
+if(startX<40 && endX>120) openMenu();   // РѕС‚РєСЂС‹С‚СЊ
+if(startX>150 && endX<80) closeMenu();  // Р·Р°РєСЂС‹С‚СЊ
 });
 
 /* ===== ACCORDION ===== */
